# orthrus_ros2_pack

./: README.md
orthrus_control/: CMakeLists.txt  orthrus_control.xml  package.xml
orthrus_control/bringup/config/: diff_controllers.yaml  orthrus_controllers.yaml
orthrus_control/bringup/launch/: diff_test.launch.py
orthrus_control/config/: orthrus_controllers.yaml
orthrus_control/description/launch/: view_robot.launch.py
orthrus_control/include/orthrus_control/: OrthrusControlVariable.hpp  OrthrusGazeboInterface.hpp  OrthrusInterface.hpp  visibility_control.h
orthrus_control/include/orthrus_control/assembly/: Encoder.hpp  Imu.hpp  Leg.hpp  Motor.hpp
orthrus_control/include/orthrus_control/calibration/: CalibrationVisualization.hpp
orthrus_control/include/orthrus_control/ethercat/: EcatBase.hpp  TypeDef.hpp
orthrus_control/src/: OrthrusGazeboInterface.cpp  OrthrusInterface.cpp
orthrus_control/src/assembly/: Encoder.cpp  Imu.cpp  Leg.cpp  Motor.cpp
orthrus_control/src/calibration/: CalibrationVisualization.cpp  OrthrusInterface_Calibration.cpp  OrthrusInterface_DataArrange.cpp  OrthrusInterface_SafeCode.cpp  OrthrusInterface_calibration.cpp
orthrus_control/src/ethercat/: EcatBase.cpp  OrthrusInterface_Ethercat.cpp
orthrus_control/src/test/: test.cpp
orthrus_controller/: CMakeLists.txt  package.xml
orthrus_controller/config/hardware_interface/: orthrus_controller_parameter.yaml
orthrus_controller/include/orthrus_controller/: OrthrusControl.hpp  OrthrusController.hpp
orthrus_controller/include/orthrus_controller/algorithm/: LeggedMpc.hpp  LeggedOdom.hpp  LeggedTouch.hpp
orthrus_controller/include/orthrus_controller/controller_base/: OrthrusControllerBase.hpp  visibility_control.h
orthrus_controller/include/orthrus_controller/hardware/: HybridJointInterfaces.hpp  ImuInterfaces.hpp
orthrus_controller/include/orthrus_controller/interfaces/: JoyInterface.hpp  OrthrusInterfaces.hpp  OrthrusParma.hpp  PinocchioInterface.hpp  PinocchioInterfaces.hpp  TypeDef.hpp
orthrus_controller/include/orthrus_controller/safecode/: SafeCode.hpp
orthrus_controller/include/orthrus_controller/visualization/: CalibrationVisualization.hpp  OrthrusVisualization.hpp
orthrus_controller/src/: OrthrusControl.cpp  OrthrusController.cpp
orthrus_controller/src/algorithm/: LeggedMpc.cpp  LeggedOdom.cpp  LeggedTouch.cpp
orthrus_controller/src/controller_base/: OrthrusControllerBase.cpp
orthrus_controller/src/hardware/: HybridJointInterfaces.cpp  ImuInterfaces.cpp
orthrus_controller/src/interfaces/: JoyInterface.cpp  OrthrusController_Config.cpp  PinocchioInterface.cpp  PinocchioInterfaces.cpp
orthrus_controller/src/safecode/: SafeCode.cpp
orthrus_controller/src/visualization/: CalibrationVisualization.cpp  OrthrusVisualization.cpp
orthrus_controller/test/: test1.cpp
orthrus_controllers/: CMakeLists.txt  package.xml
orthrus_controllers/config/mpc/: task.info
orthrus_controllers/include/orthrus_controllers/: OrthrusControl.hpp  OrthrusController.hpp  OrthrusNmpc.hpp  orthrus_cmd.hpp  orthrus_ctrl.hpp  orthrus_ctrl_base.hpp  orthrus_ctrl_test.hpp  orthrus_param_def.hpp  orthrus_type_def.hpp  orthrus_wbc.hpp
orthrus_controllers/include/orthrus_controllers/estimate/: StateEstimateBase.hpp
orthrus_controllers/src/: OrthrusControl.cpp  OrthrusController.cpp  OrthrusNmpc.cpp  orthrus_cmd.cpp  orthrus_ctrl.cpp  orthrus_wbc.cpp
orthrus_controllers/src/estimate/: StateEstimateBase.cpp
orthrus_controllers/src/hardware/: HybridJointInterfaces.cpp  ImuInterfaces.cpp
orthrus_controllers/src/interface/: LeggedRobotPreComputation.cpp  OrthrusHwInterface.cpp  OrthrusInterface.cpp
orthrus_controllers/src/nmpc/: OrthrusNmpc.cpp
orthrus_controllers/src/orthrus_controllers/: orthrus_ctrl.cpp  orthrus_ctrl_test.cpp  orthrus_param_def.cpp  orthrus_wbc.cpp
orthrus_controllers/src/visualization/: OrthrusVisualizer.cpp
orthrus_description/: CMakeLists.txt  package.xml
orthrus_description/models/orthrus/: xacro2urdf.sh
orthrus_description/models/orthrus/meshes/: leg1.STL
orthrus_interface/: CMakeLists.txt  package.xml
orthrus_interface/include/orthrus_interface/: OrthrusInterface.hpp
orthrus_interface/src/: OrthrusInterface.cpp
orthrus_interfaces/: CMakeLists.txt  package.xml
orthrus_interfaces/include/orthrus_ecat/: orthrus_leg.hpp
orthrus_interfaces/include/orthrus_interfaces/: orthrus_interfaces.hpp
orthrus_interfaces/models/orthrus/: xacro2urdf.sh
orthrus_interfaces/msg/: CtrlCmd.msg  MotorCmd.msg  MotorReceive.msg  OrthrusJointState.msg  Receive.msg  ReceiveSensor.msg
orthrus_interfaces/src/orthrus_ecat/: ecat_base.cpp
orthrus_interfaces/src/orthrus_interfaces/: orthrus_interfaces.cpp
orthrus_real/: CMakeLists.txt  package.xml
orthrus_real/include/orthrus_ecat/: ecat_base.hpp  orthrus_ecat.hpp  orthrus_imu.hpp
orthrus_real/include/orthrus_real/: ecat_base.hpp  ecat_typedef.hpp  orthrus_angle.hpp  orthrus_ecat.hpp  orthrus_imu.hpp  orthrus_leg.hpp  orthrus_motor.hpp  orthrus_real.hpp
orthrus_real/src/: orthrus_calibrate.cpp  orthrus_calibrate_mag.cpp  orthrus_ecat.cpp  orthrus_leg.cpp  orthrus_real.cpp
orthrus_real/src/assembly/: Encoder.cpp  Imu.cpp  Motor.cpp
orthrus_real/src/calibrate/: calibrate_imu.cpp  calibrate_leg.cpp
orthrus_real/src/ethercat/: ecat_base.cpp
orthrus_real/src/orthrus_ecat/: orthrus_angle.cpp  orthrus_ecat.cpp  orthrus_imu.cpp  orthrus_leg.cpp
orthrus_real/src/orthrus_real/: ecat_base.cpp  orthrus_angle.cpp  orthrus_ecat.cpp  orthrus_imu.cpp  orthrus_leg.cpp  orthrus_motor.cpp
orthrus_real/src/test/: test1.cpp  test_sensor.cpp
orthrus_real/test/: orthrus_calibrate.cpp  orthrus_calibrate_mag.cpp
orthrus_sim/orthrus_gazebo/: CMakeLists.txt  package.xml
orthrus_sim/orthrus_gazebo/config/: orthrus.yaml
orthrus_sim/orthrus_gazebo/examples/: example_gripper.cpp
orthrus_sim/orthrus_gazebo/launch/: gripper_mimic_joint_example.launch.py  gzserver.launch.py  orthrus_gazebo.launch.py  orthrus_sim.launch.py  orthrus_sim2.launch.py
orthrus_sim/orthrus_gazebo/src/: orthrus_gazebo_interface.cpp
(+129 files in other folders)
