<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orthrus_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="orthrus@todo.todo">orthrus_controllers</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <!--ros2_control-->
  <depend>hardware_interface</depend>

  <depend>sensor_msgs</depend>
  <depend>orthrus_interfaces</depend>
  <depend>pinocchio</depend>
  <depend>eigen</depend>
  <depend>rosgraph_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>tf2</depend>

  <depend>xbox_interfaces</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
