<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orthrus_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="orthrus@todo.todo">orthrus_controllers</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <!--ros2_control-->
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>

  <depend>sensor_msgs</depend>
  <depend>orthrus_interfaces</depend>
  <depend>pinocchio</depend>
  <depend>eigen</depend>
  <depend>tf2_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>ocs2_mpc</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>ocs2_pinocchio</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_legged_robot</depend>
  <depend>ocs2_legged_robot_ros</depend>
  <depend>ocs2_switched_model_interface</depend>
  <depend>ocs2_self_collision_visualization</depend>
  
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
